--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,11 @@
 services:
+  auth-db:
+    build: databases/auth-db
+    ports:
+      - "5432:5432"
   auth-ms:
     build: ./auth-ms
     ports:
-      - "8000:8080"
+      - "8000:8000"
+    depends_on:
+      - auth-db
